# data_lakehouse_s3

./: .gitignore  README.md  pyproject.toml
codes/: load_raw_to_postgres.py  load_raw_to_s3.py  main.py
data_lakehouse/: .gitignore  dbt_project.yml
data_lakehouse/models/: sources.yml
data_lakehouse/models/warehouse/bronze/: raw_orders.sql  raw_registers.sql
data_lakehouse/models/warehouse/gold/: gold_group_by_state_status.sql  gold_status_by_region.sql  gold_total_by_date.sql  gold_total_by_region.sql  gold_total_by_state.sql  gold_total_orders_by_customer.sql  gold_total_orders_by_region_date.sql  gold_total_registers_by_region.sql
data_lakehouse/models/warehouse/silver/: silver_orders.sql  silver_registers.sql
data_lakehouse/models/warehouse/silver/test/: silver_registers_test.yml
