[tool.poetry]
name = "data-lakehouse-s3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.23.0"
faker = "^36.1.1"
python-dotenv = "^1.0.1"
duckdb = "^1.2.0"
dbt-core = "^1.9.2"
dbt-postgres = "^1.9.0"
matplotlib = "^3.10.1"
plotly = "^6.0.0"
seaborn = "^0.13.2"
pathlib = "^1.0.1"
tqdm = "^4.67.1"
boto3 = "^1.37.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
